wacc/test/golden/syntaxErr.if.ifNofi
# if missing closing fi

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  if true 
  then
    skip
  else
    skip
end


Syntax error in test/wacc_examples/invalid/syntaxErr/if/ifNofi.wacc (line 17, column 1):
unexpected keyword "end"
expected ";" or fi
unclosed if statement

>     skip
> end
> ^^^

